# knowva

./: .env.docker  .gitignore  README-Docker.md  docker-compose.yml
.github/workflows/: main.yml
backend/: .env.example  Dockerfile  MONGODB_SETUP.md  README.md  SIGNUP_FLOW_API.md  auth.py  auth_routes.py  client.py  config.py  create_admin.py  customer_support_agent.py  database.py  email_service.py  env.example  mcp_manager.py  pyproject.toml  requirements-minimal.txt  requirements.txt  sample_api_calls.sh  server.py  start_server.py  test_agent.py  test_auth.py  user_service.py  vfl_project_agent.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/agents/talk/: page.tsx
frontend/src/app/ai-chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/search/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/app/signup/onboarding/: page.tsx
frontend/src/app/teams/: page.tsx
frontend/src/app/users/: page.tsx
frontend/src/app/users/signup/: page.tsx
frontend/src/components/: CitationTag.tsx  DashboardLayout.tsx  ErrorAlert.tsx  Footer.tsx  Header.tsx  InsightCard.tsx  Loader.tsx  Navbar.tsx  ProtectedRoute.tsx  ResultCard.tsx  SearchBar.tsx  Sidebar.tsx  TeamCard.tsx
frontend/src/context/: Providers.tsx
frontend/src/hooks/: useAllowedIntegrations.ts
frontend/src/libs/: api.ts  auth.tsx
frontend/src/utils/: logout.ts
zendesk-mcp/: Dockerfile  main.py
(+3 files in other folders)
